Implemented complete ML workflow for heart disease dataset: added Z-score outlier removal, label + one-hot encoding, feature scaling, and trained multiple classifiers (SVM, Logistic Regression, Random Forest). Also applied PCA for dimensionality reduction and compared model performance before and after PCA.

--- a/PCA_heart_disease_prediction_exercise_solution.ipynb
+++ b/PCA_heart_disease_prediction_exercise_solution.ipynb
@@ -407,7 +407,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 321
         },
         "id": "w4qfB1wAj49e",
         "outputId": "a79b6958-171e-4998-9d64-57bc237455c4"
@@ -2214,8 +2214,9 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 3852
+          "height": 2130
         },
+        "collapsed": true,
         "id": "XJV4x8H0kkHM",
         "outputId": "c11e2379-9eb5-42cc-dfe6-c7411bc56741"
       },
